# sdk-sm

./: .gitignore  3.0.0.patch  Cargo.toml  README.md  SMFINALClean.txt  TESTING_GUIDE.md  TESTING_REPORT.md  VALUE_CHANGED_LOCATIONS.md  VALUE_CHANGED_TEST_SPEC.md  about.toml  package-lock.json  package.json  poc.md  test_auth.py  tsconfig.json
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  renovate.json
.github/workflows/: build-cli-docker.yml  build-cli.yml  build-cpp.yml  build-dotnet.yml  build-go.yaml  build-java.yml  build-napi.yml  build-publish-python-wheels-dev.yml  build-python-wheels-dev.yml  build-python-wheels.yml  build-ruby.yml  build-rust-crates.yml  build-rust-cross-platform.yml  build-wasm.yml  build.yml  cloc.yml  cut-rc-branch.yml  direct-minimal-versions.yml  generate_schemas.yml  lint.yml  minimum-rust-version.yml  publish-bws.yml  publish-dotnet.yml  publish-java.yml  publish-napi.yml  publish-php.yml  publish-python.yml  publish-ruby.yml  publish-rust-crates.yml  publish-wasm.yml  release-bws.yml  release-cpp.yml  release-dotnet.yml  release-go.yml  release-java.yml  release-napi.yml  release-python.yml  release-ruby.yml  release-rust-crates.yml  release-wasm.yml  (+11 more)
.helix/: languages.toml
crates/bitwarden/: CHANGELOG.md  Cargo.toml  README.md
crates/bitwarden-py/: Cargo.toml  pyproject.toml
crates/bitwarden-py/src/: client.rs
crates/bitwarden/src/: error.rs  lib.rs
crates/bitwarden/tests/: access_policies.rs
crates/bitwarden/tests/access_policies/: blocked_testcases.md  granted_policies.rs  helpers.rs  integration.rs  potential_grantees.rs  project_policies.rs  secret_policies.rs  serialization.rs
scripts/: aggregate-test-results.py  auth-utils.sh  bootstrap.sh  build-from-main.sh  build-utils.sh  env-utils.sh  fake-server-utils.sh  logging-utils.sh  test-utils.sh
tests/: ADDING_INTEGRATIONS.md  ADDING_LANGUAGES.md  FAKE_SERVER_SETUP.md  README.md  STRUCTURE.md  SdkTestFramework.sln  coding-standards.md
(+166 files in other folders)
