[package]
name = "bitwarden-py"
version = "2.0.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
name = "bitwarden_py"
crate-type = ["cdylib"]

[dependencies]
bitwarden-json = { path = "../bitwarden-json", features = ["secrets"] }
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3"] }
pyo3-log = "0.13.2"

[build-dependencies]
pyo3-build-config = { version = "0.28.0" }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
