[package]
name = "bitwarden"
description = """
Bitwarden Secrets Manager SDK
"""
keywords = ["bitwarden", "secrets-manager"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["secrets"]

no-memory-hardening = [
    "bitwarden-core/no-memory-hardening",
] # Disable memory hardening features
secrets = [
    "dep:bitwarden-auth",
    "dep:bitwarden-sm",
    "dep:bitwarden-generators",
] # Secrets manager API
wasm = [] # WASM support

[dependencies]
bitwarden-core = { workspace = true }
bitwarden-generators = { workspace = true, optional = true }
bitwarden-sm = { workspace = true, optional = true }
thiserror = "2.0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bitwarden-auth = { workspace = true, optional = true, features = ["wasm"] }
bitwarden-core = { workspace = true, features = ["wasm"] }
bitwarden-generators = { workspace = true, optional = true, features = ["wasm"] }

[dev-dependencies]
uuid = { version = ">=1.3.3, <2.0", features = ["serde", "v4"] }

[lints]
workspace = true
